@@ -2230,11 +2230,11 @@ dtrace_program_strcompile(dtrace_hdl_t *dtp, const char *s,
 {
 	dtrace_prog_t *rv;
 
-	rv = dt_compile(dtp, DT_CTX_DPROG,
-	    spec, NULL, cflags, argc, argv, NULL, s);
-
-	if (cflags & DTRACE_C_DIFV)
-		dt_dis_program(dtp, rv, stderr);
+	if ((rv = dt_compile(dtp, DT_CTX_DPROG,
+		    spec, NULL, cflags, argc, argv, NULL, s)) != NULL) {
+		if (cflags & DTRACE_C_DIFV)
+			dt_dis_program(dtp, rv, stderr);
+	}
 	return (rv);
 }
 
@@ -2244,11 +2244,11 @@ dtrace_program_fcompile(dtrace_hdl_t *dtp, FILE *fp,
 {
 	dtrace_prog_t *rv;
 
-	rv = dt_compile(dtp, DT_CTX_DPROG,
-	    DTRACE_PROBESPEC_NAME, NULL, cflags, argc, argv, fp, NULL);
-
-	if (cflags & DTRACE_C_DIFV)
-		dt_dis_program(dtp, rv, stderr);
+	if ((rv = dt_compile(dtp, DT_CTX_DPROG,
+		    DTRACE_PROBESPEC_NAME, NULL, cflags, argc, argv, fp, NULL)) != NULL) {
+		if (cflags & DTRACE_C_DIFV)
+			dt_dis_program(dtp, rv, stderr);
+	}
 	return (rv);
 }
 
